Updated Opportunities Page / Card Component
Changed font colors, font sizes, font weights, background colors, rounded corners, filter icon, and scrollbar gap to be more inline with Figma design.

--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@ body {
 }
 
 .dashboard-section::-webkit-scrollbar-thumb {
-  background-color: #003366;
+  background-color: #3B8223;
   border-radius: 10px;
 }
 
