--- a/src/views/Opportunities.css
+++ b/src/views/Opportunities.css
@@ -2,28 +2,20 @@
   flex-grow: 1;
   padding: 2rem;
   overflow-y: auto;
-}
-
-.content-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 0.5rem;
+  color: rgba(0, 0, 0, 0.57);
 }
 
 .opportunities-header-card {
   width: 100%;
-  background-color: white;
   padding: 0.5px 0;
-  text-align: center;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   margin-bottom: 15px;
 }
 
-.opportunities-header-card h1 {
-  font-size: 1.8rem;
-  font-weight: 600;
-  color: #333;
+.opportunities-title {
+  font-size: 2rem;
+  font-weight: 700;
+  color: #000;
+  text-align: left;
 }
 
 .opportunities-tabs {
@@ -35,13 +27,27 @@
 .tab-button {
   flex: 1;
   padding: 1rem;
-  background-color: white;
+  background: white;
   border: 1.5px solid #86909C;
   cursor: pointer;
   font-weight: 500;
   font-size: 1rem;
-  color: #333;
+  color: rgba(0, 0, 0, 0.57);
   transition: background-color 0.3s ease, color 0.3s ease;
+  border-radius: 0;
+  outline: none;
+}
+
+.tab-button:focus-visible {
+  outline: none;
+}
+
+.tab-left {
+  border-radius: 8px 0 0 8px;
+}
+
+.tab-right {
+  border-radius: 0 8px 8px 0;
 }
 
 .tab-button:not(:last-child) {
@@ -49,7 +55,7 @@
 }
 
 .tab-button.active {
-  background-color: #1F5378;
+  background-color: #3B8223;
   color: white;
 }
 
@@ -61,35 +67,27 @@
   margin-bottom: 1.5rem;
 }
 
-.controls-left {
-  display: flex;
-  gap: 0.75rem;
-}
-
-.control-button {
-  display: flex;
-  align-items: center;
-  background-color: white;
-  color: #717171;
-  border: 2px solid #ddd;
-  border-radius: 50px;
-  padding: 0.5rem 1rem;
-  font-size: 0.9rem;
-  cursor: pointer;
-}
-
+.controls-left,
 .controls-right {
   display: flex;
   align-items: center;
 }
 
+.controls-left {
+  gap: 0.75rem;
+}
+
+.control-button,
 .search-field {
   display: flex;
   align-items: center;
-  background-color: white;
+  background: white;
   border: 2px solid #ddd;
-  border-radius: 50px;
+  border-radius: 8px;
   padding: 0.5rem 1rem;
+  font-size: 0.9rem;
+  cursor: pointer;
+  color: rgba(0, 0, 0, 0.57);
 }
 
 .search-input {
@@ -97,7 +95,7 @@
   outline: none;
   background: transparent;
   font-size: 0.9rem;
-  color: #717171;
+  color: rgba(0, 0, 0, 0.57);
   width: 200px;
 }
 
@@ -105,4 +103,15 @@
   width: 16px;
   height: 16px;
   margin-right: 0.5rem;
+}
+
+.dashboard-section {
+  margin-bottom: 2rem;
+  max-height: 24rem;
+  overflow-y: auto;
+}
+
+.cards-wrapper {
+  padding-right: 8px;
+  box-sizing: content-box;
 }
