--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,6 +1,9 @@
 .card {
-    background-color: white;
+    background-color: #FFFFFF;
+    border: 2px solid #D9D9D9;
     border-radius: 8px;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     margin-bottom: 0.75rem;
     margin-top: 0.75rem;
@@ -10,15 +13,13 @@
   .card-header {
     display: flex;
     align-items: center;
-    background-color: #e0e0e0;
+    background-color: #F2F3F5;
     padding: 0.5rem;
     width: 100%;
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
   }
   
   .card-title {
-    font-weight: 600;
+    font-weight: 750;
     margin-left: 0.5rem;
     flex-grow: 1;
   }
@@ -43,7 +44,7 @@
   }
   
   .card-points {
-    color:#5b5f64;
+    color: rgba(0, 0, 0, 0.57);
     list-style-type: disc;
     padding-left: 1.5rem;
     margin: 0;
