--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,60 +1,81 @@
 .card {
-    background-color: #FFFFFF;
-    border: 2px solid #D9D9D9;
-    border-radius: 8px;
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    margin-bottom: 0.85rem;
-    overflow: hidden;
-  }
-  
-  .card-header {
-    display: flex;
-    align-items: center;
-    background-color: #F2F3F5;
-    padding: 0.5rem;
-    width: 100%;
-  }
-  
-  .card-title {
-    font-weight: 750;
-    margin-left: 0.5rem;
-    flex-grow: 1;
-  }
-  
-  .card-info {
-    font-size: 0.9rem;
-    color: #555;
-    padding-right: 1rem;
-  }
-  
-  .card-icon {
-    width: 20px;
-    height: 20px;
-    margin-right: 0.5rem;
-  }
-  
-  .card-content {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 1rem;
-  }
-  
-  .card-points {
-    color: rgba(0, 0, 0, 0.57);
-    list-style-type: disc;
-    padding-left: 1.5rem;
-    margin: 0;
-  }
-  
-  .join-now-button {
-    background-color: white;
-    color: black;
-    border: 1px solid #ccc;
-    padding: 0.5rem 1rem;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
+  background-color: #FFFFFF;
+  border: 2px solid #D9D9D9;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin-bottom: 0.85rem;
+  overflow: hidden;
+}
+
+.card-header {
+  display: flex;
+  align-items: center;
+  background-color: #F2F3F5;
+  padding: 0.5rem;
+  width: 100%;
+}
+
+.card-title {
+  font-weight: 750;
+  margin-left: 0.5rem;
+  flex-grow: 1;
+}
+
+.card-info {
+  font-size: 0.9rem;
+  color: #555;
+  padding-right: 1rem;
+}
+
+.card-icon {
+  width: 20px;
+  height: 20px;
+  margin-right: 0.5rem;
+}
+
+.card-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem;
+}
+
+.card-points {
+  color: rgba(0, 0, 0, 0.57);
+  list-style-type: disc;
+  padding-left: 1.5rem;
+  margin: 0;
+  flex-grow: 1;
+}
+
+.button-bookmark-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 0.75rem;
+}
+
+.join-now-button {
+  background-color: white;
+  color: black;
+  border: 1px solid #ccc;
+  padding: 0.5rem 1rem;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.bookmark-icon {
+  width: 24px;
+  height: 24px;
+  cursor: pointer;
+  filter: grayscale(100%);
+  transition: filter 0.3s ease;
+}
+
+.bookmark-icon.bookmarked {
+  filter: none;
+}
+
+.bookmark-icon:focus {
+  outline: 2px solid #007bff;
+  outline-offset: 2px;
+}
