--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -16,7 +16,7 @@
   width: 17.5rem;
   background: #fff;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  padding: 1rem;
+  padding: 1rem 0.25rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
