--- a/src/views/Opportunities.css
+++ b/src/views/Opportunities.css
@@ -32,7 +32,7 @@
   cursor: pointer;
   font-weight: 500;
   font-size: 1rem;
-  color: rgba(0, 0, 0, 0.57);
+  color: #000000;
   transition: background-color 0.3s ease, color 0.3s ease;
   border-radius: 0;
   outline: none;
