--- a/src/views/DashboardView.css
+++ b/src/views/DashboardView.css
@@ -1,24 +1,24 @@
 .dashboard-view-content {
   flex-grow: 1;
-  padding: 2rem;
-  padding-bottom: 0.25rem;
+  padding: 2rem 2rem 0.25rem;
   overflow-y: auto;
-  width: 100%;
-  box-sizing: border-box;
   color: rgba(0, 0, 0, 0.57);
+  box-sizing: border-box;
 }
 
-.wide-container {
+.wide-container,
+.content-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.wide-container {
   background-color: #f8f9fa;
   padding: 2rem;
   border-radius: 8px;
   margin-bottom: 2rem;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  width: 100%;
-  box-sizing: border-box;
 }
 
 .wide-container-left {
@@ -35,21 +35,22 @@
 .wide-container-left p {
   font-size: 1rem;
   margin-bottom: 1.5rem;
-  color: rgba(0, 0, 0, 0.57);
 }
 
 .get-started-button {
-  background-color: green;
-  color: white;
-  border: none;
+  background: #fff;
+  color: #000;
+  border: 1px solid #000;
   padding: 0.75rem 1.5rem;
   font-size: 1rem;
   border-radius: 4px;
   cursor: pointer;
+  transition: background 0.3s, color 0.3s;
 }
 
 .get-started-button:hover {
-  background-color: #228b22;
+  background: #3B8223;
+  color: #fff;
 }
 
 .wide-container-right {
@@ -66,11 +67,39 @@
   object-fit: cover;
 }
 
-.content-header {
-  display: flex;
-  justify-content: space-between;
+.sort-by {
+  display: inline-flex;
   align-items: center;
-  margin-bottom: 1rem;
+  font-family: inherit;
+  justify-content: flex-end;
+}
+
+.sort-by label {
+  font-size: 14px;
+}
+
+.select-wrapper {
+  position: relative;
+}
+
+.select-wrapper select {
+  all: unset;
+  font-size: 14px;
+  cursor: pointer;
+  width: 90px;
+  padding-right: 20px;
+  background: transparent;
+}
+
+.select-wrapper::after {
+  content: "";
+  position: absolute;
+  top: 65%;
+  right: 8px;
+  border: 6px solid transparent;
+  border-top-color: #535458;
+  transform: translateY(-50%);
+  pointer-events: none;
 }
 
 .cards-wrapper {
