--- a/src/components/UpdateCard.css
+++ b/src/components/UpdateCard.css
@@ -8,6 +8,7 @@
   flex-direction: column;
   align-items: center;
   padding: 0.5rem 3rem;
+  position: relative;
 }
 
 .team-member-icon {
@@ -21,6 +22,21 @@
   background-color: #D4D4D4;
   flex-grow: 1;
   height: 100%;
+  position: relative;
+}
+
+.vertical-line::after {
+  content: '';
+  position: absolute;
+  bottom: -30px;
+  left: 0;
+  width: 2px;
+  height: 30px;
+  background-color: #D4D4D4;
+}
+
+.vertical-line.vertical-line-end::after {
+  display: none;
 }
 
 .update-card {
